Use utf-8 input encoding.

--- a/research_paper/newpackages.tex
+++ b/research_paper/newpackages.tex
@@ -10,7 +10,7 @@
 \usepackage{color,pstricks}
 
 % To allow me to use letters with accent
-\usepackage[latin1]{inputenc}
+\usepackage[utf8]{inputenc}
 
 %Footnotes
 \usepackage{endnotes}
