--- a/research_paper/main.tex
+++ b/research_paper/main.tex
@@ -30,7 +30,7 @@
 
 	\title{Thomspon Sampling for rate ressource allocation in WiFi networks}
 	\subtitle{}
-	\numberofauthors{4}
+	\numberofauthors{5}
 	\author{
 		\alignauthor
 		Bjoern Smedman\\
@@ -45,6 +45,11 @@
 		\alignauthor
 		Amir Sani\\
 			\email{reachme@amirsani.com}
+		\and
+		Toke Høiland-Jørgensen\\
+	    		\affaddr{Dept of Mathematics and Computer Science}\\
+			\affaddr{Karlstad University, Sweden}\\
+			\email{toke.hoiland-jorgensen@kau.se}
 		\and
 		\alignauthor
 		New Contributors\\
